--- a/gleam.toml
+++ b/gleam.toml
@@ -1,8 +1,8 @@
-name = "shine"
+name = "shiny"
 version = "1.0.0"
 description = "A TUI library for Gleam"
 licences = ["MIT"]
-repository = { type = "github", user = "gleemers", repo = "shine" }
+repository = { type = "github", user = "gleemers", repo = "shiny" }
 # links = [{ title = "Website", href = "" }] # planned for future
 
 [dependencies]
